1. Улучшения Collection API [#285573]