@@ -11,6 +11,7 @@ import static org.junit.Assert.*;
 
 /**
  * 5. Конвертация листа массивов в один лист Integer [#285703]
+ * 1. Улучшения Collection API [#285573]
  */
 public class ConvertListTest {
 
@@ -19,7 +20,7 @@ public class ConvertListTest {
         List<int[]> in = new ArrayList<>();
         in.add(new int[] {1});
         in.add(new int[] {2, 3});
-        List<Integer> expect = Arrays.asList(1, 2, 3);
+        List<Integer> expect = List.of(1, 2, 3);
         assertThat(ConvertList.convert(in), is(expect));
     }
 
@@ -31,7 +32,7 @@ public class ConvertListTest {
         in.add(new int[] {4, 5, 6});
         in.add(new int[] {7});
         in.add(new int[] {8, 9});
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9);
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9);
         assertThat(ConvertList.convert(in), is(expect));
     }
 }
